incorporate small comments throughout the entire paper

--- a/TeX/paper/parts/soc_ext_appendix_tables.tex
+++ b/TeX/paper/parts/soc_ext_appendix_tables.tex
@@ -3,6 +3,7 @@
 
 %--------------------------------------------
 % CODING of offenses: keys and penal code
+\begin{landscape}
 \vspace*{\fill}
 \begin{table}[H]\centering
 	\begin{threeparttable}\centering \caption{Coding of various offenses}\label{tab_soc_ext:offense_keys_code}
@@ -15,12 +16,12 @@
 			\bottomrule
 		\end{tabular}
 		\begin{tablenotes}
-			\item \scriptsize \emph{Notes:} The table shows how the keys of the Police Crime Statistics are translated into the corresponding paragraphs of the German Criminal Code (StGB).
+			\item \scriptsize \emph{Notes:} The table shows how the keys of the Police Crime Statistics are translated into the corresponding paragraphs of the German Criminal Code (\textit{StGB}).
 		\end{tablenotes}
 	\end{threeparttable}
 \end{table}
 \vspace*{\fill}\clearpage
-
+\end{landscape}
 %--------------------------------------------
 % Channels: Derbies and prominent games
 \vspace*{\fill}
