--- a/TeX/paper/parts/soc_ext_body.tex
+++ b/TeX/paper/parts/soc_ext_body.tex
@@ -1,6 +1,6 @@
 
 % introductory paragraph
-\lettrine[lines=2,nindent=0pt]{\color{darkgray}\textbf{F}}{ootball} has grown from being a favorite sport in many parts of the world into a respected industry, which is reflected by high attendance rates and considerable revenues.\footnote{Except where otherwise noted, football refers to the sport also known as soccer.} For instance, the \textit{Bundesliga}, the German top league, is a major reason for public mass gatherings and had with 42,700 spectators the highest average attendance per match of all European leagues in the season 2017/18. Also in economic terms, football is synonymous with big business as the \textit{Bundesliga} ranks second in Europe with generated revenues of 3.17 billion euros \citep{deloitte2019report}. Due to their great popularity, professional football matches generate external effects in many regards. On the positive side, there is higher consumer spending (e.g. merchandising, catering, and accommodation) and ultimately increased local tax revenues. On the negative side, the games induce air and noise pollution, together with a higher frequency of accidents, among other things. Violent fan behavior is a particularly pervasive aspect in this context and affects individuals' health, the penal system, and the police. In the 2017/18 season, the State and Federal Police force invested over 2.11 million working hours to ensure the spectators' safety at professional football matches in Germany \citep{zis17_18}. There has been a widely noticed legal dispute between the Federal State of Bremen and the German Football League (DFL) regarding the reimbursement of costs for high-risk games, in which the \cite{fac_2019} declared the charges imposed by Bremen as legitimate. This study does not only focus on football matches where social interactions lead to violence, but also deals with the question of whether the negative externalities of football games that bring so much prosperity should be absorbed. 
+\lettrine[lines=2,nindent=0pt]{\color{darkgray}\textbf{F}}{ootball} has grown from being a favorite sport in many parts of the world into a respected industry, which is reflected by high attendance rates and considerable revenues.\footnote{Except where otherwise noted, football refers to the sport also known as soccer.} For instance, the \textit{Bundesliga}, the German top league, is a major reason for public mass gatherings and had with 42,700 spectators the highest average attendance per match of all European leagues in the season 2017/18. Also in economic terms, football is synonymous with big business as the \textit{Bundesliga} ranks second in Europe with generated revenues of 3.17 billion euros \citep{deloitte2019report}. Due to their great popularity, professional football matches generate external effects in many regards. On the positive side, there is higher consumer spending (e.g. merchandising, catering, and accommodation) and ultimately increased local tax revenues. On the negative side, the games induce air and noise pollution, and a higher frequency of accidents, among other things. Violent fan behavior is a particularly pervasive aspect in this context and affects individuals' health, the penal system, and the police. In the 2017/18 season, the State and Federal Police force invested over 2.11 million working hours to ensure the spectators' safety at professional football matches in Germany \citep{zis17_18}. There has been a widely noticed legal dispute between the Federal State of Bremen and the German Football League (DFL) regarding the reimbursement of costs for high-risk games, in which the \cite{fac_2019} declared the charges imposed by Bremen as legitimate. This study does not only focus on football matches where social interactions lead to violence, but also deals with the question of whether the negative externalities of football games that bring so much prosperity should be absorbed. 
 
 
 
@@ -11,7 +11,7 @@ The aim of this paper is to examine in detail the effects of football games on v
 
 
 % findings
-I find significant and robust evidence that football matches lead to an increase in the prevalence of physical assaults. A home game increases the assault rate by on average 21.5 percent. The effects are almost entirely driven by male victims and are most pronounced in the 18-29 age group. Moreover, a heterogeneity analysis reveals that the effects are caused by attacks on victims with no prior relationship to the suspect and completed offenses (i.e. no attempts). Assaults on police officers on duty account for 16 percent of the baseline effect of the entire sample. I find no evidence that the effects of football games on the prevalence of assaults are offset by reductions in violent acts on days adjacent to the matchday or in nearby areas. The focus on home games in the empirical framework does not pose a threat to the identification strategy, as away games do not change the level of physical assaults in the home district.
+I find significant and robust evidence that football matches lead to an increase in the prevalence of physical assaults. A home game increases the assault rate by on average 21.5 percent. The effects are almost entirely driven by male victims and are most pronounced in the 18-29 age group. Moreover, a heterogeneity analysis reveals that the effects are caused by attacks on victims with no prior relationship to the suspect and completed offenses (i.e. no attempts). Assaults on police officers on duty account for 16 percent of the baseline effect of the entire sample. I find no evidence that the effects of football games on the prevalence of assaults are offset by reductions in violent acts on days adjacent to the game day or in nearby areas. The focus on home games in the empirical framework does not pose a threat to the identification strategy, as away games do not change the level of physical assaults in the home district.
 
 
 
@@ -88,7 +88,7 @@ Alcohol plays a crucial role in the context of spectator violence in German foot
 % Literature
 The paper relates to previous literature that investigates the impact of large scale sporting events on various types of criminal behavior. Studies in the US American context often use offense reports from the National Incident Based Reporting System to investigate the impact of American (college) football games on crime. \cite{rees2009college} exploit within agency variation to study the effects of Division I-A college American football games on various offense categories for the years 2000-2005.\footnote{Almost all of the following studies exploit within law enforcement agency variation over time while controlling for weather, holidays and other sources of heterogeneity over time.} They find an increase in assaults, vandalism, arrests for disorderly conduct, and alcohol-related offenses in hosting municipalities on game days. Larger effects are associated with unexpected game outcomes, defined as when lower ranked teams win against higher ranked teams. The effects of away games are not significantly different from zero. \cite{lindo2018college} examine the effect of college party culture in the context of Division 1 American football games on sexual assaults. They show that the daily reports of rape victimization among 17-24-year-old women increase by 28 percent on games days. The effects are larger for home games, prominent matches, and games involving teams playing in the better ranked subdivision of Division 1. Furthermore, they show that game outcomes matter: unexpected wins lead to a strong increase in the number of rapes. \cite{card2011family} analyze the impact of emotionally unsettling events associated with wins and losses of professional American football teams on family violence for the years 1995-2006. They find a ten percent increase in intimate partner violence in the event of unexpected losses (when the home team was expected to win). There are no effects for unexpected wins or when the game expectations predict a close match. The effects of intimate partner violence of men against women are pronounced around the end of the game and are larger for higher-profile games. 
 
-In the European context, researchers focus on football matches to estimate the effect of large scale sporting events on crime. \cite{marie2016police} investigates the effect of football matches on crime in London using hourly offense data from the Metropolitan Crime Statistics System. His results show that property crimes increase (decrease) by 4 percent (3 percent) for every additional 10,000 spectators attending a home (away) game. Violent crimes are only affected by derby matches. \cite{montolio2016time} study the temporal impact of football matches on criminal behavior in Barcelona (2007-2011). They match reports of registered crime with football matches played by the Football Club Barcelona (FCB) to see whether the games lead to temporal shifts in criminal activity. They employ a panel approach comparing crime rates during the same time window on the same weekday with and without FCB games. Their results indicate temporal shifts for criminal activities of thefts, criminal damage, robberies, and gender violence. Moreover, instances of gender violence increase after home defeats. In a follow-up study, \cite{montolio2019measuring} investigate the spatial dimensions of crime externalities associated with football games. Their findings show that, in the event of a home game, theft rates (mainly pickpocketing) increase in the entire city. The impact is larger for regions in close proximity to the stadium. During away games, by contrast, the number of thefts occurring near the stadium is relatively smaller. The effects of football matches on assaults are analogous to thefts. In fact, on days with home matches, there are relatively more physical assaults in areas close to the stadium.
+In the European context, researchers focus on football matches to estimate the effect of large scale sporting events on crime. \cite{marie2016police} investigates the effect of football matches on crime in London using hourly offense data from the Metropolitan Crime Statistics System. His results show that property crimes increase (decrease) by 4 percent (3 percent) for every additional 10,000 spectators attending a home (away) game. Violent crimes are only affected by derby matches. \cite{montolio2016time} study the temporal impact of football matches on criminal behavior in Barcelona (2007-2011). They match reports of registered crime with football matches played by the Football Club Barcelona (FCB) to see whether the games lead to temporal shifts in criminal activity. They employ a panel approach comparing crime rates during the same time window on the same day of the week with and without FCB games. Their results indicate temporal shifts for criminal activities of thefts, criminal damage, robberies, and gender violence. Moreover, instances of gender violence increase after home defeats. In a follow-up study, \cite{montolio2019measuring} investigate the spatial dimensions of crime externalities associated with football games. Their findings show that, in the event of a home game, theft rates (mainly pickpocketing) increase in the entire city. The impact is larger for regions in close proximity to the stadium. During away games, by contrast, the number of thefts occurring near the stadium is relatively smaller. The effects of football matches on assaults are analogous to thefts. In fact, on days with home matches, there are relatively more physical assaults in areas close to the stadium.
 %\footnote{In addition to the papers presented in this section, other noteworthy studies in that strand of research are: \cite{kalist2016national}.}
 
 
@@ -106,14 +106,14 @@ The data set used for the analysis covers the time window from 2011 to 2015 and 
 
 
 \subsection{Crime Data}
-The crime data are derived from the German Police Crime Statistics, which are provided by the Federal Criminal Police Office.\footnote{Many aspects of the data preparation are inspired by \cite{hener2019noise} who uses the same data to examine the causal effect of noise pollution on criminal activities.} It includes the universe of individuals who were victim to a crime against their legally protected personal rights between 2011 and 2015. However, as the data are not reported until after police procedures are completed, only data from January 2011 to May 2015 are used to avoid problems with lags between the occurrence of the crime and the time of reporting. Besides, the month of June is excluded from the analysis as there are generally no matches during that time of the year. In addition to the time and place (municipality level) of the crime, the date include the crime type code, the victim's age and gender, information on how the attack was carried out (attempt/completed act, usage of a firearm, lone operator/crime was committed by a group) and information on the relationship between victim and suspect.\footnote{The relationship between victim and suspect is retrieved in two ways. On the one hand, formal relationships are recorded (such as types of kinship or acquaintance). On the other hand, relationships are defined in spatial-social terms (for instance living in the same household, or being in an educational or care relationship).} Roughly 40 percent of victims are female, the average age is 32 years, and 40 percent of the victims had no prior relationship with the suspect.
+The crime data is derived from the German Police Crime Statistics, which is provided by the Federal Criminal Police Office.\footnote{Many aspects of the data preparation are inspired by \cite{hener2019noise} who uses the same data to examine the causal effect of noise pollution on criminal activities.} It includes the universe of individuals who were victim to a crime against their legally protected personal rights between 2011 and 2015. However, as the data is not reported until after police procedures are completed, only data from January 2011 to May 2015 is used to avoid problems with lags between the occurrence of the crime and the time of reporting. Besides, the month of June is excluded from the analysis as there are generally no matches during that time of the year. In addition to the time and place (municipality level) of the crime, the date include the crime type code, the victim's age and gender, information on how the attack was carried out (attempt/completed act, usage of a firearm, lone operator/crime was committed by a group) and information on the relationship between victim and suspect.\footnote{The relationship between victim and suspect is retrieved in two ways. On the one hand, formal relationships are recorded (such as types of kinship or acquaintance). On the other hand, relationships are defined in spatial-social terms (for instance living in the same household, or being in an educational or care relationship).} Roughly 40 percent of victims are female, the average age is 32 years, and 40 percent of the victims had no prior relationship with the suspect.
 % (up to the hour) 
 
 
 % crime - assault distribution over time
 \input{soc_ext_fig__assault_time_distribution_2014}
 
-The micro-data is aggregated to the municipality-day level and the main outcome, the assault rate, is defined as the number of assaults per million population. Assaults are defined as actions involving physical violence. For that purpose, I use the crime type code `intentional simple bodily harm' (\textit{Vorsätzliche einfache Körperverletzung}, § 223 StGB). There are roughly 120 types of criminal offenses (recorded in 6 digit codes), with the vast majority of cases classified by only a handful of codes.\footnote{The top 10 of the most prevalent crime keys account for more than 90 percent of the cases.} Figure \ref{fig_soc_ext:offense_types_distribution_2014} in the Appendix shows the distribution of cases per crime key for the twenty most common offense types in 2014. The intentional simple bodily injury is by far the most common offense, contributing to about 45 percent of all cases. Due to its prevalence and its association with aggression, I choose this offense type as the main outcome variable in the analysis.
+The micro-data is aggregated to the municipality-day level and the main outcome, the assault rate, is defined as the number of assaults per million population. Assaults are defined as actions involving physical violence. For that purpose, I use the crime type code `simple willful bodily harm' (\textit{Vorsätzliche einfache Körperverletzung}, § 223 StGB). There are roughly 120 types of criminal offenses (recorded in 6 digit codes), with the vast majority of cases classified by only a handful of codes.\footnote{The top 10 of the most prevalent crime keys account for more than 90 percent of the cases.} Figure \ref{fig_soc_ext:offense_types_distribution_2014} in the Appendix shows the distribution of cases per crime key for the twenty most common offense types in 2014. `Simple willful bodily harm' is by far the most common offense, contributing to about 45 percent of all cases. Due to its prevalence and its association with aggression, I choose this offense type as the main outcome variable in the analysis.
 
 Figure \ref{fig_soc_ext:assault_time_distribution_2014} shows the distribution of assaults over time. Panel A displays the variation of assaults per hour of the day.\footnote{Roughly 15 percent of the observations do not contain hourly information. This has no consequences for the main analysis, as I examine daily variation in the assault rate.} The number of assaults increases during the day and peaks around midnight. To assign the cases that occur in the early morning hours to the day on which they originate, I define a day as beginning at 6:00\textsc{am} and ending at 5:59\textsc{am}. Panel B shows the distribution of assaults by day of the week. There are relatively more assaults on Fridays and Saturdays, whereas the other days exhibit slightly smaller assault rates. Panel C shows that the number of assaults has a strong seasonal pattern, with the highest value recorded in May and the smallest in August.\footnote{Panel C shows the monthly number of assaults while adjusting for the number of days per month.} Panel D confirms this impression by plotting the daily number of assaults. New Year's Eve is a particularly impressive outlier.\footnote{Panels C and D show data for the year 2014 only. Figure \ref{fig_soc_ext:assault_year_distribution} in the Appendix shows the distribution per day for different years.}
 
@@ -143,7 +143,7 @@ The weather data is derived from Germany's National Meteorological Service (\tex
 
 
 \subsection{Holidays}
-In order to capture any variation in the crime rate between ordinary and special days, I add controls for public and school holidays, which may differ at the state level.\footnote{The data on school holidays come from `The Standing Conference of the Ministers of Education and Cultural Affairs of the Länder in the Federal Republic of Germany' (\textit{Kultusminister Konferenz}). The data on public holidays are collected from \href{https://www.schulferien.org/deutschland/feiertage/}{https://www.schulferien.org/deutschland/feiertage/}.} Furthermore, I add a dummy variable for peculiar days (New Year's Eve and the days surrounding Carnival), which are not holidays, yet certainly shift the crime rate.
+In order to capture any variation in the crime rate between ordinary and special days, I add controls for public and school holidays, which may differ at the state level.\footnote{The data on school holidays comes from `The Standing Conference of the Ministers of Education and Cultural Affairs of the Länder in the Federal Republic of Germany' (\textit{Kultusminister Konferenz}). The data on public holidays is collected from \href{https://www.schulferien.org/deutschland/feiertage/}{https://www.schulferien.org/deutschland/feiertage/}.} Furthermore, I add a dummy variable for peculiar days (New Year's Eve and the days surrounding Carnival), which are not holidays, yet certainly shift the crime rate.
 
 
 
@@ -245,7 +245,7 @@ Previously, I have presented evidence that football games increase the assault r
 In order to estimate \textit{spatial displacement effects}, I investigate the impact of football matches on neighboring regions. A neighboring region is a municipality that shares a border with a region in which a stadium is located.\footnote{If two municipalities share a border and each of the regions contains a stadium, both regions will not serve as neighbor regions and they are dismissed from the set of spatial spillover candidates.} Figure \ref{fig_soc_ext:map_gem_stadiums_monitor_and_neighboring_regions} shows a map of the selected regions. The sample of neighboring regions exhibits a considerably higher number of observations. This is owed to the fact that a region with a stadium has on average slightly more than 11 neighboring municipalities. Panel A of Table \ref{tab_soc_ext:reg_fe_assrate_displacement} shows the estimates of the impact of a home game on these neighboring regions. In comparison to the baseline effects, the spatial spillover coefficients are small and not significantly different from zero. Consequently, the results do not suggest offsetting spatial spillover effects.
 
 % temporal displacement
-In the next step, \textit{temporal displacement effects} are considered. To capture these effects, I include one-day leads and lags of the game day indicator. Panel B of Table \ref{tab_soc_ext:reg_fe_assrate_displacement} contains the estimates when including the temporal spillover components in the baseline model. The estimates of the gameday itself are not significantly different from the baseline model. Almost all of the coefficients for the day before and after the game are small in magnitude and not statistically significant. The only exception is the estimate for the day before the game in column 4, which implies that a football game leads to an average increase of 0.352 assaults per million population on the day before a game. The positive coefficient, however, does not suggest temporal displacement effects, which would require a negative estimate. Rather, it indicates additional assaults due to activity on the day preceding important games. 
+In the next step, \textit{temporal displacement effects} are considered. To capture these effects, I include a one-day lead and lag of the game day indicator. Panel B of Table \ref{tab_soc_ext:reg_fe_assrate_displacement} contains the estimates when including the temporal spillover components in the baseline model. The estimates of the game day itself are not significantly different from the baseline model. Almost all of the coefficients for the day before and after the game are small in magnitude and not statistically significant. The only exception is the estimate for the day before the game in column 4, which implies that a football game leads to an average increase of 0.352 assaults per million population on the day before a game. The positive coefficient, however, does not suggest temporal displacement effects, which would require a negative estimate. Rather, it indicates additional assaults due to activity on the day preceding important games. 
 
 % table HOME & AWAY games 
 \input{soc_ext_tab__reg_fe_assrate_home_away}
@@ -308,7 +308,7 @@ Due to the nonlinearity of the model, the coefficient in Table \ref{tab_soc_ext:
 
 
 % Other forms of violence 
-\textbf{Other forms of violence.--} Next, I investigate the robustness of the findings when considering at other forms of violence. First, a broader definition of assaults is considered. In addition to offenses coded as `simple bodily harm', I further include negligent, dangerous, and grievous bodily harm as well as brawls. Appendix Table \ref{tab_soc_ext:offense_keys_code} illustrates which offenses are included in the expanded definition of assaults and how the penal codes of the German Criminal Code are translated into the offense keys of the Police Crime Statistics. The effect size of 5.417 assaults per million population is significantly larger than the baseline coefficient. This indicates that football games also lead to an increase in other forms of physical violence. Second, I investigate the effect of football games on threats, which can be regarded as a precursor of physical violence. The effect size of 0.216 threats per million population is relatively small. The estimate represents a 5.4 percent increase. Third, offenses coded as resisting law enforcement officers are examined. I find that football games lead to on average 0.775 offenses per million population. Overall, the results of these robustness checks indicate that other forms of violence are also affected by professional football games. This suggests that there is no substitution of different types of crime, but that additional violent offenses are committed.\newline
+\textbf{Other forms of violence.--} Next, I investigate the robustness of the findings when considering at other forms of violence. First, a broader definition of assaults is considered. In addition to offenses coded as `simple willful bodily harm', I further include negligent, dangerous, and grievous bodily harm as well as brawls. Appendix Table \ref{tab_soc_ext:offense_keys_code} illustrates which offenses are included in the expanded definition of assaults and how the penal codes of the German Criminal Code (\textit{StGB}) are translated into the offense keys of the Police Crime Statistics. The effect size of 5.417 assaults per million population is significantly larger than the baseline coefficient. This indicates that football games also lead to an increase in other forms of physical violence. Second, I investigate the effect of football games on threats, which can be regarded as a precursor of physical violence. The effect size of 0.216 threats per million population is relatively small. The estimate represents a 5.4 percent increase. Third, offenses coded as resisting law enforcement officers are examined. I find that football games lead to on average 0.775 offenses per million population. Overall, the results of these robustness checks indicate that other forms of violence are also affected by professional football games. This suggests that there is no substitution of different types of crime, but that additional violent offenses are committed.\newline
 
 
 % Placebo games
@@ -334,7 +334,7 @@ Due to the nonlinearity of the model, the coefficient in Table \ref{tab_soc_ext:
 \section{Discussion and Conclusion}\label{sec_soc_ext:conclusion}
 
 % summary
-In this paper, I analyze the impact of professional football games on violent behavior. To estimate the causal effects of football games on physical assaults, I use a generalized difference-in-differences approach that exploits variation in the timing of matches. I compare regional assault rates on days with and without matches, conditional on the day of the week, month, and year while additionally accounting for potential confounding variation coming from weather and holidays. I match web-scraped information on 4,461 football matches with data on local assault rates, weather, holidays, and population figures to construct a panel at the municipality-day level for the period 2011-2015. I find that a home game increases the average assault rate by 21.5 percent. Male victimization rates drive the results and are particularly high for the 18-29 age group. Besides, the the effects are larger for victims with no prior relationship to the suspect and for completed offenses. There are no offsetting reductions in assault rates on days adjacent to game days or in nearby regions. In examining potential channels, I find no evidence that emotional cues are responsible for the increase in assaults on match days. Although there is no evidence supporting the frustration-aggression hypothesis, I find large effects for prominent games and teams. In fact, this set of results suggests that spectators mimic player behavior, select into specific matches, or that the mere agglomeration of fans leads to an increase in the assault rates on game days. 
+In this paper, I analyze the impact of professional football games on violent behavior. To estimate the causal effects of football games on physical assaults, I use a generalized difference-in-differences approach that exploits variation in the timing of matches. I compare regional assault rates on days with and without matches, conditional on the day of the week, month, and year while additionally accounting for potential confounding variation coming from weather and holidays. I match web-scraped information on 4,461 football matches with data on local assault rates, weather, holidays, and population figures to construct a panel at the municipality-day level for the period 2011-2015. I find that a home game increases the average assault rate by 21.5 percent. Male victimization rates drive the results and are particularly high for the 18-29 age group. Besides, the the effects are larger for victims with no prior relationship to the suspect and for completed offenses. There are no offsetting reductions in assault rates on days adjacent to game days or in nearby regions. In examining potential channels, I find no evidence that emotional cues are responsible for the increase in assaults on game days. Although there is no evidence supporting the frustration-aggression hypothesis, I find large effects for prominent games and teams. In fact, this set of results suggests that spectators mimic player behavior, select into specific matches, or that the mere agglomeration of fans leads to an increase in the assault rates on game days. 
 
 
 
