--- a/TeX/paper/soc_ext_paper_main.tex
+++ b/TeX/paper/soc_ext_paper_main.tex
@@ -161,7 +161,7 @@ labelfont={bf}
 %--------------------------------------------------------------------
 %	AUTHOR & TITLE
 %--------------------------------------------------------------------
-\title{Crime Externalities from Football Games in Germany\footnote{I am very grateful to Victoria Endl-Geyer, Helmut Rainer, and Patrick Reich for valuable comments and discussions. Furthermore, I thank conference participants at the ifo Institute. The author gratefully acknowledges financial support from the Leibniz association. Dominik Ammon provided excellent research assistance. All errors and omissions are my own.
+\title{Crime Externalities from Football Games in Germany\footnote{I am very grateful to Victoria Endl-Geyer, Juliane Neumeier, Helmut Rainer, and Patrick Reich for valuable comments and discussions. Furthermore, I thank conference participants at the ifo Institute. The author gratefully acknowledges financial support from the Leibniz association. Dominik Ammon provided excellent research assistance. All errors and omissions are my own.
 }}
 \author{
 	Marc Fabel 
@@ -205,7 +205,7 @@ labelfont={bf}
 \renewcommand{\abstractname}{\vspace{-\baselineskip}} % GET RID OF ABSTRACT TITLE
 \begin{abstract}\noindent 
 	\footnotesize{\begin{center}\textbf{Abstract}\end{center} 
-		This paper investigates the impact of professional football games on physical violence in Germany. I employ a generalized difference-in-differences strategy that exploits time-series and cross-sectional variation in crime register data for the period 2011-2015. I compare the level of assaults on days with and without matches while controlling for date heterogeneity, weather, and holidays. My results suggest that a home game leads to an increase of the assault rate by 21.5 percent. The effects are largely driven by male victims, who do not know the perpetrator, and are decreasing with age. In total, professional football games explain almost 18 percent of all assault reports and generate annual social costs of 95 million euros.	\\\newline \textbf{Keywords:} football games, violent crime, assaults. \newline \textbf{JEL codes:} J19, K42, Z13, Z29.}
+		This paper investigates the impact of professional football games on physical violence in Germany. I employ a generalized difference-in-differences strategy that exploits time-series and cross-sectional variation in crime register data for the period 2011-2015. I compare the number of assaults on days with and without football matches, while controlling for date heterogeneity, weather, and holidays. My results suggest that a home game leads to a 21.5 percent increase in the assault rate. The effects are largely driven by male victims who do not know the perpetrator, and decrease with the victims' age. In total, professional football games explain almost 18 percent of all assault reports and generate annual social costs of 95 million euros.	\\\newline \textbf{Keywords:} football games, violent crime, assaults. \newline \textbf{JEL codes:} J19, K42, Z13, Z29.}
 
 \end{abstract}
 
@@ -328,7 +328,7 @@ labelfont={bf}
 \newpage
 {\color{red}\textbf{TO DO (decreasing priority)}}
 \begin{itemize}
-	\item ML application
+	\item ML application\newline {\color{red}Furthermore, the plan for the future is to leverage the high dimensionality of the data to investigate treatment effect heterogeneity using machine learning algorithms (e.g. by making use of causal forests).} 
 	\item break it down to hour windows: before, during, and after the game - do I see a incapacitation effect as Dahl and Della Vigna (2009)
 	\item different specification of what are the affected regions, vary radius around stadium which region is affected: at first use only region (gemeinde/Kreis) in which the stadium is located, then play around with radius.
 	\item placebo outcomes (any type that is not affected)?
