--- a/analysis/output/tables/reg_fe/assrate_fixed_effects_emotional_cues.tex
+++ b/analysis/output/tables/reg_fe/assrate_fixed_effects_emotional_cues.tex
@@ -8,11 +8,11 @@ Expected to win     &                     &       2.752\sym{***}&       2.907\sy
                     &                     &     (0.366)         &     (0.356)         \\
 Expected to be close&                     &       2.437\sym{***}&       2.369\sym{***}\\
                     &                     &     (0.321)         &     (0.383)         \\
-Expected to lose and won (upset win)&                     &                     &       0.599         \\
+Expected to lose and won&                     &                     &       0.599         \\
                     &                     &                     &     (1.554)         \\
-Expected to be close and lost (upset loss)&                     &                     &       0.194         \\
+Expected to be close and lost&                     &                     &       0.194         \\
                     &                     &                     &     (0.610)         \\
-Expected to win and lost (upset loss)&                     &                     &      -0.792         \\
+Expected to win and lost&                     &                     &      -0.792         \\
                     &                     &                     &     (0.667)         \\
 \midrule Observations&      88,028         &      88,028         &      88,028         \\
 %Region FE           &         \checkmark         &         \checkmark         &         \checkmark         \\
