--- a/analysis/output/tables/soc_ext_fig__assault_rate_across_dows.tex
+++ b/analysis/output/tables/soc_ext_fig__assault_rate_across_dows.tex
@@ -2,6 +2,6 @@
 	\caption{The average assault rate on gamedays and days where no game takes place}\label{fig_soc_ext:assault_rate_across_dows}
 	\includegraphics[width=0.9 \linewidth]{descriptive/soc_ext_descr_assaultrate_gd_nongd_hor.pdf}
 	\begin{minipage}{0.95\linewidth}
-		\scriptsize{\emph{Notes:} The figure shows the daily average number of assaults per million population for regions that host games of a football team from the first three leagues of the German football league system. The daily rates are shown for weeks in which a game is played and for weeks in which no game takes place.}
+		\scriptsize{\emph{Notes:} The figure shows the daily average number of assaults per million population for regions that host games of a football team from the top three leagues. The daily rates are shown for weeks in which a game is played and for weeks in which no game takes place.}
 	\end{minipage}
 \end{figure}
