--- a/TeX/paper/parts/soc_ext_appendix_figures.tex
+++ b/TeX/paper/parts/soc_ext_appendix_figures.tex
@@ -10,7 +10,7 @@
 	\caption{The types of criminal offenses}\label{fig_soc_ext:offense_types_distribution_2014}
 	\includegraphics[width=0.9 \linewidth]{descriptive/soc_ext_offense_key_distribution_2014.pdf}
 	\begin{minipage}{0.95\linewidth}
-		\scriptsize{\emph{Notes:} The figure depicts the frequency distribution of the most common criminal offenses in the Federal Republic of Germany in 2014. The most common offense type is intentional simple bodily injury (224000), followed by threats (232300), and two forms of dangerous and serious bodily injury (222110 \& 222010). These four offense types together comprise around 75\% of all criminal offenses.}
+		\scriptsize{\emph{Notes:} The figure depicts the frequency distribution of the most common criminal offenses in the Federal Republic of Germany in 2014. The most common offense type is simple willful bodily harm (224000), followed by threats (232300), and two forms of dangerous and serious bodily injury (222110 \& 222010). These four offense types together comprise around 75\% of all criminal offenses.}
 	\end{minipage}
 \end{figure}
 \vspace*{\fill}\clearpage
@@ -84,7 +84,7 @@
 	\includegraphics[width=\linewidth]{descriptive/soc_ext_descr_assaults_gd_nongd_hor.pdf}
 	\scriptsize
 	\begin{minipage}{\linewidth}
-		\emph{Notes:} The figure shows the daily average number of assaults for regions that host games of a football team from the first three leagues of the German football league system. The daily rates are shown for weeks in which a game is played and for weeks in which no game takes place.
+		\emph{Notes:} The figure shows the daily average number of assaults for regions that host games of a football team from the top three leagues of the German football league system. The daily rates are shown for weeks in which a game is played and for weeks in which no game takes place.
 	\end{minipage}
 \end{figure}
 \vspace*{\fill}\clearpage
