--- a/analysis/output/tables/descriptive/offense_key_stgb_code.tex
+++ b/analysis/output/tables/descriptive/offense_key_stgb_code.tex
@@ -1,5 +1,5 @@
 \textbf{Broadly defined assault}\\
-\hspace{10pt} simple bodily harm							&224000			& 223 \\
+\hspace{10pt} simple willful bodily harm					&224000			& 223 \\
 \hspace{10pt} negligent bodily harm							&225000			& 229 \\
 \hspace{10pt} dangerous bodily harm							&222010,222110	& 224 \\
 \hspace{10pt} grievous bodily harm							&222020,222120	& 226 \\
