--- a/analysis/output/tables/reg_fe/assrate_fixed_effects_displacement.tex
+++ b/analysis/output/tables/reg_fe/assrate_fixed_effects_displacement.tex
@@ -21,7 +21,7 @@ Effect size [\%]&       22.34         &       22.60         &       22.98       
 Observations        &      87,438         &      87,438         &      87,438         &      87,438         \\
  \\\\
  Region FE           &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         \\
- Date Fe             &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         \\
+ Date FE             &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         \\
  Weather Controls    &           -         &         \checkmark         &         \checkmark         &         \checkmark         \\
  Holiday FE          &           -         &           -         &         \checkmark         &         \checkmark         \\
  Interact FE         &           -         &           -         &           -         &         \checkmark         \\
