--- a/analysis/output/tables/soc_ext_tab__reg_fe_assrate_displacement.tex
+++ b/analysis/output/tables/soc_ext_tab__reg_fe_assrate_displacement.tex
@@ -9,7 +9,7 @@
 				\bottomrule 
 		\end{tabular}}
 		\begin{tablenotes} 
-			\item \scriptsize \emph{Notes:} Estimates are based on the model shown in equation \ref{eq_soc_ext:model}. Panel A contains specifications that use daily data (excluding June) spanning the time window 2011-2015 for regions that share a common boundary with a distract that contains a stadium of a football team from the first three leagues of the German football league system. Panel B shows specifications that use daily data (excluding June) spanning the time window 2011-2015 for regions that host games of a football team from the first three leagues of the German football league system. The outcome variable is defined as the number of assaults per million population. Population-weighted coefficients show the change in the outcome variable due to a home game. Days are defined to run from 6:00 AM until 5:59 AM the following day to accommodate the fact that offenses committed in the early hours have their origin in the preceding day. The effect size corresponds to the percent change of the assault rate due to a football game in relation to the mean when no game takes place. The estimates are based on the model shown in equation \ref{eq_soc_ext:model} and use the same set of controls as column 4 of Table \ref{tab_soc_ext:reg_fe_assrate} (including region and date fixed effects, their interactions as well as holiday and weather controls). See Table \ref{tab_soc_ext:reg_fe_assrate} for additional details. Two-way clustered standard errors at region-year and year-month level are reported in parentheses. \newline Significance levels: * p < 0.10, ** p < 0.05, *** p < 0.01.
+			\item \scriptsize \emph{Notes:} Estimates are based on the model shown in equation \ref{eq_soc_ext:model}. Panel A contains specifications that use daily data (excluding June) spanning the time window 2011-2015 for regions that share a border with a distract in which a stadium is located. Panel B shows specifications that use daily data (excluding June) spanning the time window 2011-2015 for regions that host games of a football team from the top three leagues. The outcome variable is defined as the number of assaults per million population. Population-weighted coefficients show the change in the outcome variable due to a home game. Days are defined to run from 6:00\textsc{am} until 5:59\textsc{am} the following day to accommodate the fact that offenses committed in the early morning hours have their origin in the preceding day. The effect size corresponds to the percent change of the assault rate due to a football game in relation to the mean when no game takes place. The estimates are based on the model shown in equation \ref{eq_soc_ext:model} and use the same set of controls as column 4 of Table \ref{tab_soc_ext:reg_fe_assrate} (including region and date fixed effects, their interactions as well as holiday and weather controls). See Table \ref{tab_soc_ext:reg_fe_assrate} for additional details. Two-way clustered standard errors at region-year and year-month level are reported in parentheses. \newline Significance levels: * p < 0.10, ** p < 0.05, *** p < 0.01.
 		\end{tablenotes} 
 	\end{threeparttable} 
 \end{table}
